--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@sentry/cli": "^2.33.1",
     "@sentry/nextjs": "^8.26.0",
     "@tanstack/react-table": "^8.17.0",
     "class-variance-authority": "^0.7.0",
